Clase ArticleList agregada